[tool.poetry]
name = "trapdoor"
version = "0.1.0-alpha.1"
description = "Turn-key configuration file management for Python packages."
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
license = "MIT"
packages = [
    { include = "trapdoor" },
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
