[tool.poetry]
name = "trapdoor"
version = "0.2.0"
description = "Turn-key configuration file management for Python packages."
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
license = "MIT"
packages = [
    { include = "trapdoor" },
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-semantic-release = "^7.22.0"
Sphinx = "^4.3.0"
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
build_command = "poetry build"
commit_author = "Clay McLeod <clay.l.mcleod@gmail.com>"
commit_message = ""
commit_subject = "chore: bumping version to v{version}"
upload_to_release = "false"
version_source = "commit"
version_variable = "pyproject.toml:version"